remove wrong assertion SERVER-386